<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Sunshine</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map">View location in Maps</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings edited by Junior-->

    <!-- Label for the location preference [CHAR_LIMIT=30]-->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences- [CHAR_LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Key name for location's name in SharedPreferences- [CHAR_LIMIT=NONE] -->
    <string name="pref_location_name" translatable="false">location_name</string>

    <!-- Default ID for location preferences (São José dos Campos) [CHAR_LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">São José dos Campos</string>

    <string name="pref_location_latitude" translatable="false">loc-lat</string>
    <string name="pref_location_longitude" translatable="false">loc-long</string>

    <!-- Label for the unit preference [CHAR_LIMIT=30]-->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Key name for storing units in SharedPreferences- [CHAR_LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Default units for temperature- [CHAR_LIMIT=NONE] -->
    <string name="pref_units_default" >Metric</string>

    <!-- Summary for units in metric preferences- [CHAR_LIMIT=NONE] -->
    <string name="pref_units_metric">Metric</string>

    <!-- Summary for units in metric preferences- [CHAR_LIMIT=NONE] -->
    <string name="pref_units_imperial">Imperial</string>

    <string name="pref_lat_key" translatable="false">latitude</string>

    <string name="pref_lon_key" translatable="false">longitude</string>

    <string name="pref_location_status_key" translatable="false">locationStatus</string>
    
    <string name="pref_icon_key" translatable="false">icon</string>

    <string name="pref_icon_default">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <string name="pref_icon_label">Icons Pack</string>

    <string name="pref_icon_sunshine">Sunshine</string>

    <string name="pref_icon_cute_dogs">Cute Dogs</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/sunshine_icons/master/Archive/Colored/art_%s.png</string>



    <!-- Strings used when displaying the state of the Location in settings -->
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="pref_location_unknown_description">Validating Location... (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Wind speed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="wind">Wind</string>
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="pressure">Pressure</string>
    <string name="format_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="humidity">Humidity</string>
    <string name="format_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="weather_condition_illustration">Weather condition illustration.</string>
    <string name="compass_view">Compass showing the wind direction.</string>
    <string name="compass_accessibility">Wind speed direction has changed.</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast in <xliff:g id="city">%1$s</xliff:g>: <xliff:g id="condition">%2$s</xliff:g> High: <xliff:g id="high">%3$s</xliff:g> Low: <xliff:g id="low">%4$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="pref_notification_key">notification</string>
    <string name="pref_notification_title">Notifications</string>
    <string name="pref_notification_on">Enable</string>
    <string name="pref_notification_off">Disable</string>



    <!-- Sever and network error strings -->
    <string name="empty_string">No Weather Information Available</string>
    <string name="network_error">No Weather Information Available. No Internet Connectivity</string>
    <string name="empty_forecast_list_server_down">No Weather Information Available. The Server Is Not Returning Data.</string>
    <string name="empty_forecast_list_server_error">No Weather Information Available. The Server Is Not Returning Valid Data.</string>
    <string name="empty_forecast_list_server_unknown">No Weather Information Available Due A Unknown Error.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="access_item_icon">A image ilustrating the weather</string>

    <string name="gcm_weather_alert">Heads up: %1$s in %2$s!</string>
    <string name="sunshine_logo">Sunshine Logo</string>

    <!-- A11y -->
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>

    <!-- Weather Conditions -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="low">%1$s</xliff:g>)</string>

    <string name="detail_icon_transition_name" translatable="false">detail_icon_transition</string>
    <string name="pref_current_location_desc">Use my location.</string>

    <!-- For Google Places API Attributions -->
    <string name="attribution_text">Powered by Google</string>

    <string name="title_widget_today">Sunshine Today</string>
    <string name="title_widget_detail">Sunshine Details</string>

    <string name="muzei_description">Today\'s weather</string>
</resources>
