<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.android.sunshine.app"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <com.example.android.sunshine.app.LocationEditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label"
        app:minLength="3"
        />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_units_default"
         />

    <CheckBoxPreference
        android:key="@string/pref_notification_key"
        android:title="@string/pref_notification_title"
        android:summaryOn="@string/pref_notification_on"
        android:summaryOff="@string/pref_notification_off"
        android:defaultValue="true"
        />




</PreferenceScreen>
