<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    >


    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/widget"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/widget_city_name_text_view"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            tools:text="Sao Jose dos Campos"
            tools:ignore="UnusedAttribute" />
-->
        <LinearLayout
            android:id="@+id/widget_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Toolbar"
            android:paddingLeft="@dimen/detail_view_extra_padding"
            android:paddingRight="@dimen/detail_view_extra_padding"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/list_icon"
                android:layout_height="@dimen/list_icon"
                android:contentDescription="@string/weather_condition_illustration"
                android:src="@drawable/ic_clear"
                android:layout_marginEnd="@dimen/forecast_temperature_space"
                android:layout_marginRight="@dimen/forecast_temperature_space" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/list_icon"
                android:src="@drawable/ic_logo"
                android:scaleType="center"
                android:contentDescription="@string/sunshine_logo"
                />

        </LinearLayout>


    </LinearLayout>
    <ListView
        android:id="@+id/widget_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/widget_list_item"
        />
    <!-- empty list -->
    <TextView
        android:id="@+id/widget_listview_forecast_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:textAppearance="?android:textAppearance"
        android:text="@string/empty_string"
        tools:ignore="UnusedAttribute"
        />

</LinearLayout>
